--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-app.jwt-secret=mySecretKey
-app.jwt-expiration=86400000
-
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/task_trecker
+spring.datasource.url=jdbc:postgresql://localhost:5432/task_trecker_test
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
@@ -13,3 +10,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.max_fetch_depth=3
 spring.jpa.properties.hibernate.jdbc.batch_size=50
+
+security.oauth2.client.client-id=my-client
+security.oauth2.client.client-secret=my-secret
+security.oauth2.resource.jwt.key-value=secret
+
+
