--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,5 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.max_fetch_depth=3
 spring.jpa.properties.hibernate.jdbc.batch_size=50
 
-security.oauth2.client.client-id=my-client
-security.oauth2.client.client-secret=my-secret
-security.oauth2.resource.jwt.key-value=secret
-
-
+#security.oauth2.resource.jwt.key-value=secret
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
