No OAuth2, just JWT and Spring Security. TODO AuthServ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-#server.servlet.context-path=/api
-server.port=8080
+server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/task_trecker_test
 spring.datasource.username=postgres
@@ -11,5 +10,13 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.max_fetch_depth=3
 spring.jpa.properties.hibernate.jdbc.batch_size=50
 
-#security.oauth2.resource.jwt.key-value=secret
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
+token.signing.key = bXktc2VjcmV0LWtleQ==
+
+#  my-secret-key
+
+
+logging.level.root=INFO
+logging.level.com.shep=DEBUG
+logging.file.name=app.log
+
+
