--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.max_fetch_depth=3
 spring.jpa.properties.hibernate.jdbc.batch_size=50
 
-token.signing.key = bXktc2VjcmV0LWtleQ==
+token.signing.key = LwdXEf897Znp5QOelFo33djYAQya8iB0AIMGNYDYQEg=
 
 #  my-secret-key
 
